# KZ_taxation

./: .gitignore  CLAUDE.md  README.md  kase_aix_preferential.py  kase_preferential.py  pyproject.toml
configs/: accounts.example.toml  form270.example.toml  form270.toml
data/: aix_instruments.xlsx  aix_pref.xlsx  kase_aix_pref.xlsx  kase_aix_pref_yearly.xlsx  kase_pref.xlsx  kase_pref_yearly.xlsx  nb_rates.xlsx  offshore_list.xlsx  tabys_instruments.xlsx
data/fx_rates/: nbk_average_annual_rates.csv
data/templates/: 250.00 empty.xml  270 new template (filled example).json  270 new template description.txt  270 new template.json  270.00 empty (old).xml  AssetsTypes.json  ThreeSymbolsCurrency.json  ThreeSymbolsISOCountres.json  TradesTypes.json  transfer_out_template.xlsx
docs/: ARCHITECTURE.md  CANONICAL_SCHEMA.md  IMPLEMENTATION_PLAN.md
legacy/: AIX_parcer.py  CalcBankFreedom.py  CalcExante.py  CalcFreedom.py  CalcIBtrades.py  CalcTsifraBroker.py  Currency.xlsx  Filling_250.py  Filling_270.py  Join_270.py  NB_parser.py  Offshores_iso2.xlsx
legacy/data/: 270_2024_D1463345_Freedom_Сулейменов_Олжас_Шамильевич_filled.xml  270merged_2024_Сулейменов_Олжас_Шамильевич.xml  (+12 more)
tests/: test_cli.py  test_discovery.py  test_exante_parser.py  test_form270_json.py  test_freedom_bank_parser.py  test_freedom_parser.py  test_ib_parser.py  test_joint_workbook.py  test_kase_aix_preferential.py  test_legacy_normalizer.py  test_nbk_rates.py  test_reconciliation.py  test_tabys_parser.py  test_transfer_fifo.py  test_tsifra_parser.py  test_workbook_merge.py  test_workbook_schema.py
(+52 files in other folders)
